# BCP-paper

./: .gitignore  comparison_25percent_1teams.txt  output.yaml  paths.txt  requirements.txt  run_benchmark.sh
CBS-TA/: CMakeLists.txt
CBS-TA/example/: cbs_ta.cpp  ecbs_ta.cpp  shortest_path_heuristic.hpp
maps/: warehouse.map
ortools/ortools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/benchmarks/: comparison_25percent_12teams.py  comparison_25percent_1teams.py  comparison_25percent_3teams.py  comparison_25percent_6teams.py  comparison_warehouse.py  graph_times.py  main.py  map.py  output.yaml  run_with_timeout.py  util.py
python/benchmarks/32x32_1/: results_CBM.txt  results_CBM.txt.10agents  results_CBM.txt.11agents  results_CBM.txt.12agents  results_CBM.txt.13agents  results_CBM.txt.14agents  results_CBM.txt.15agents  results_CBM.txt.16agents  results_CBM.txt.17agents  results_CBM.txt.18agents  results_CBM.txt.19agents  results_CBM.txt.1agents  results_CBM.txt.20agents  results_CBM.txt.21agents  results_CBM.txt.22agents  results_CBM.txt.23agents  results_CBM.txt.24agents  results_CBM.txt.25agents  results_CBM.txt.26agents  results_CBM.txt.27agents  results_CBM.txt.28agents  results_CBM.txt.29agents  results_CBM.txt.2agents  results_CBM.txt.30agents  results_CBM.txt.31agents  results_CBM.txt.32agents  results_CBM.txt.33agents  results_CBM.txt.34agents  results_CBM.txt.35agents  results_CBM.txt.36agents  results_CBM.txt.37agents  results_CBM.txt.38agents  results_CBM.txt.39agents  results_CBM.txt.3agents  results_CBM.txt.40agents  results_CBM.txt.41agents  results_CBM.txt.42agents  results_CBM.txt.43agents  results_CBM.txt.44agents  results_CBM.txt.45agents  (+160 more)
python/benchmarks/32x32_12/: results_CBM.txt.100agents  results_CBM.txt.10agents  results_CBM.txt.11agents  results_CBM.txt.12agents  results_CBM.txt.13agents  results_CBM.txt.14agents  results_CBM.txt.15agents  results_CBM.txt.16agents  results_CBM.txt.17agents  results_CBM.txt.18agents  results_CBM.txt.19agents  results_CBM.txt.1agents  results_CBM.txt.20agents  results_CBM.txt.21agents  results_CBM.txt.22agents  results_CBM.txt.23agents  results_CBM.txt.24agents  results_CBM.txt.25agents  results_CBM.txt.26agents  results_CBM.txt.27agents  (+180 more)
(+7015 files in other folders)
